--- a/package.json
+++ b/package.json
@@ -1,23 +1,56 @@
 {
-  "name": "manual-tecnico",
+  "name": "ckeditor-vue2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "dev": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^27.1.0",
+    "@ckeditor/ckeditor5-vue2": "^1.0.5",
+    "@tinymce/tinymce-vue": "^3.2.8",
+    "bootstrap": "^4.6.2",
     "core-js": "^3.6.5",
+    "dotenv": "^17.2.3",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
+    "quill": "^2.0.3",
+    "quill-table": "^1.0.0",
+    "quill-table-ui": "^1.0.7",
+    "tinymce": "^5.10.7",
     "vue": "^2.6.11",
+    "vue-froala-wysiwyg": "^4.6.2",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.15",
-    "@vue/cli-plugin-router": "~4.5.15",
-    "@vue/cli-plugin-vuex": "~4.5.15",
-    "@vue/cli-service": "~4.5.15",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "babel-eslint": "^10.1.0",
+    "copy-webpack-plugin": "^13.0.1",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.11"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
   },
   "browserslist": [
     "> 1%",
