--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-froala-wysiwyg": "^4.6.2",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
+    "vuedraggable": "^2.24.3",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
